Neuro Changelog

****************************

Version 2.0.2 (05-08-12)
-Updated German, Hebrew, Dush and Portuguese language files. 
-Added Spanish, Persian, French, Croatian, Italian,  Romanian, Rushian, Swedish and Turkish language files. 
-Updated response.pot

Version 2.0.1 (04-30-12)
-Added opt-in PressTrends code.
-Fixed filename of default slider image.  
-Added Pinterest social icon. 
-CSS fix for fallback menu. 

Version 2.0 (04-18-12)
-Moved to CyberChimps Response Core Framework. 
-Added post formats support.

Version 1.1.4 (9-8-11)
-Updated theme options page.
-Register sidebar now within a function that hooks into widgets_init. 
-Stripping HTML from Google + URL input. 
-Adjusted footer widget style. 
-Fixed featured-thumb margins.
-Added link to Neuro theme options settings in the Admin bar. 

Version 1.1.3 (7-15-11)
-Fixed logo blowout issue related to adding Google + icon.

Version 1.1.2 (7-13-11)
-Added Google + social icon.

Version 1.1.1 (7-6-11)
-Adjusted theme option CSS to eliminate WordPress 3.2 footer styling conflict.
-Security fix in comments.php removing $_SERVER variable statement.
-Cleaned up options.php, removed unnecessary functions.
-Now enqueueing WordPress jQuery library instead of Google's for offline functionality. 

Version 1.1 (6-27-11)
-No changes, new version number required to push uncorrupted build on WordPress.org

Version 1.0.9 (6-22-11)
-jQuery noconflict patch to fix third-party plugin compatibility issues.
-Removed unnecessary function from options.php with unidentified variable.

Version 1.0.8 (6-11-11)
-Fixed font-weight property in posts.
-Featured images now link to corresponding post, fixed featured image alignment.

Version 1.0.7 (5-30-11)
-Added "Design" tab, moved color scheme/background selector and custom CSS under "Design".
-Default background/color scheme changed to wood/black.
-Changed social icons, removed broken IE alpha transparency fix.
-Added color chooser for footer color.

Version 1.0.6 (5-20-11)